# trade_rings

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  constants.ts  index.css  main.tsx
app/src/anchor-program/: anchor-program-service.ts  idl.json  types.ts
app/src/components/: AgentTradeCard.tsx  AnchorInteractor.tsx  ArenaPreviewCard.tsx  BotTrading.tsx  Breadcrumb.tsx  CodeBlock.tsx  HoldingsChart.tsx  PriceHistoryChart.tsx  RegisterForArenaCard.tsx  TokenSelector.tsx  TradeTabs.tsx  arenaCard.tsx  arenaCardList.tsx
app/src/components/common/: Breadcrumb.tsx
app/src/contexts/: ManualTradeDataContext.tsx  WalletContext.tsx
app/src/data/: codeSnippet.ts  tokens.ts
app/src/hooks/: index.ts  useManualTradeData.ts  useProgramServices.ts
app/src/lib/: anchor_interactions.ts
app/src/pages/: AgentTrade.tsx  Arena.tsx  ArenaList.tsx  AssetList.tsx  ManualTrade.tsx  RegisterForArena.tsx  Trade.tsx
app/src/types/: token.ts  types.ts
app/src/ui/: button.tsx
app/src/utils/: binance-api.ts  helper.ts  price-stream.ts  token-map.ts
fetch/: .env.sample  agent.py  leaderboard operator.py  price history operator.py  rsa_keys_generator.py  solana operator.py  solana_operator.py
patch/: update-anchor-and-add-rollups-dependencies.patch
programs/ephemeral_rollups/: Cargo.toml
programs/ephemeral_rollups/src/: errors.rs  lib.rs
scripts/: build-for-svm-tests.sh  build.sh  test.sh  upgrade.sh
tests/: ephemeral_rollups.ts  index.test.ts
(+10 files in other folders)
