[package]
name = "ephemeral_rollups"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ephemeral_rollups"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-admin = []


[dependencies]
anchor-lang = "0.31.0"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }
pyth-solana-receiver-sdk = "1.0.1"

